syntax = "proto3";

package msg;

message PingRequest {
  uint32 time = 1;
}

message PingResponse {
    uint32 time = 1;
}


message LoginRequest {
  string acct = 1;
  string pass = 2;
}

message LoginResponse {
    uint32 error_code = 1;
}


message EnterGameRequest {
}

message EnterGameResponse {
    uint32 error_code = 1;
}
